--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import 'global/base';
 
+@import 'components/bird';
 @import 'components/contacts-links';
 @import 'components/footer';
 @import 'components/header';
