--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,4 @@
 @import 'components/heading';
 @import 'components/main-content';
 @import 'components/main-menu';
+@import 'components/pause-button';
